ersetze als deprecated markierten Konstruktor von Double(double)